Bottom-Up/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> primario
Rule 2     program -> primario program
Rule 3     program -> NOVALINHA
Rule 4     primario -> controle
Rule 5     primario -> declaracao
Rule 6     primario -> definicao
Rule 7     primario -> atribuicao
Rule 8     primario -> chamada
Rule 9     primario -> defsubfuncao
Rule 10    primario -> NOVALINHA primario
Rule 11    controle -> se
Rule 12    controle -> enquanto
Rule 13    controle -> para
Rule 14    declaracao -> TIPO ID
Rule 15    empty -> <empty>
Rule 16    senaosemais -> senaose senaosemais
Rule 17    senaosemais -> empty
Rule 18    senaose -> SENAOSE expressao : suite
Rule 19    senao -> SENAO : suite
Rule 20    senao -> empty
Rule 21    se -> SE expressao : suite senaosemais senao FIM
Rule 22    enquanto -> ENQUANTO expressao : suite FIM
Rule 23    intid -> INT
Rule 24    intid -> ID
Rule 25    para -> PARA ID DE intid ATE intid : suite FIM
Rule 26    definicao -> DEF TIPO ID ( params ) : suite_sem_retorno retorna FIM
Rule 27    definicao -> DEF TIPO ID ( params ) : suite_sem_retorno retorna novalinha FIM
Rule 28    novalinha -> NOVALINHA
Rule 29    novalinha -> NOVALINHA novalinha
Rule 30    defsubfuncao -> DEF VAZIO ID ( params ) : suite FIM
Rule 31    atribuicao -> ID [ INT ] = valor
Rule 32    atribuicao -> ID = valor
Rule 33    valorvalor -> , valor valorvalor
Rule 34    valorvalor -> empty
Rule 35    chamada -> ID ( valor valorvalor )
Rule 36    chamada -> ID ( )
Rule 37    valor -> ID
Rule 38    valor -> literal
Rule 39    valor -> chamada
Rule 40    valor -> CONSTANTE
Rule 41    expressao -> exp_ou
Rule 42    comparacao -> valor
Rule 43    comparacao -> valor operador_comp valor
Rule 44    operador_comp -> <
Rule 45    operador_comp -> >
Rule 46    operador_comp -> IGUIG
Rule 47    operador_comp -> MAIORIG
Rule 48    operador_comp -> MENORIG
Rule 49    operador_comp -> DIF
Rule 50    exponenciacao -> comparacao
Rule 51    exponenciacao -> comparacao EXP exp_u
Rule 52    exp_u -> exponenciacao
Rule 53    exp_u -> - exp_u
Rule 54    exp_u -> + exp_u
Rule 55    param -> declaracao
Rule 56    params -> param , params
Rule 57    params -> param
Rule 58    params -> empty
Rule 59    retorna -> RETORNA expressao
Rule 60    imprime -> IMPRIME expressao
Rule 61    op_aum -> MAISIG
Rule 62    op_aum -> MENOSIG
Rule 63    op_aum -> MULTIG
Rule 64    op_aum -> DIVIG
Rule 65    op_aum -> MODIG
Rule 66    op_aum -> EXPIG
Rule 67    exp_m -> exp_u
Rule 68    exp_m -> exp_m * exp_u
Rule 69    exp_m -> exp_m DIVINT exp_u
Rule 70    exp_m -> exp_m / exp_u
Rule 71    exp_a -> exp_m
Rule 72    exp_a -> exp_a + exp_m
Rule 73    exp_a -> exp_a - exp_m
Rule 74    exp_ou -> exp_e
Rule 75    exp_ou -> exp_ou OU exp_e
Rule 76    exp_e -> exp_nao
Rule 77    exp_e -> exp_e E exp_nao
Rule 78    exp_nao -> exp_a
Rule 79    exp_nao -> ! exp_nao
Rule 80    suite -> afirmacao
Rule 81    suite -> afirmacao NOVALINHA suite
Rule 82    suite -> NOVALINHA suite
Rule 83    suite -> empty
Rule 84    suite_sem_retorno -> afirmacao_sem_retorno
Rule 85    suite_sem_retorno -> afirmacao_sem_retorno NOVALINHA suite_sem_retorno
Rule 86    suite_sem_retorno -> NOVALINHA suite_sem_retorno
Rule 87    suite_sem_retorno -> empty
Rule 88    afirmacao -> afirm_simples
Rule 89    afirmacao -> afirm_composto
Rule 90    afirmacao_sem_retorno -> afirm_simples_sem_retorno
Rule 91    afirmacao_sem_retorno -> afirm_composto
Rule 92    afirm_simples -> atribuicao
Rule 93    afirm_simples -> atribuicao_aumentada
Rule 94    afirm_simples -> imprime
Rule 95    afirm_simples -> retorna
Rule 96    afirm_simples -> QUEBRA
Rule 97    afirm_simples -> CONTINUA
Rule 98    afirm_simples_sem_retorno -> atribuicao
Rule 99    afirm_simples_sem_retorno -> atribuicao_aumentada
Rule 100   afirm_simples_sem_retorno -> imprime
Rule 101   afirm_simples_sem_retorno -> QUEBRA
Rule 102   afirm_simples_sem_retorno -> CONTINUA
Rule 103   afirm_composto -> se
Rule 104   afirm_composto -> enquanto
Rule 105   afirm_composto -> para
Rule 106   atribuicao_aumentada -> ID op_aum valor
Rule 107   literal -> PALAVRA
Rule 108   literal -> INT
Rule 109   literal -> REAL

Terminals, with rules where they appear

!                    : 79
(                    : 26 27 30 35 36
)                    : 26 27 30 35 36
*                    : 68
+                    : 54 72
,                    : 33 56
-                    : 53 73
/                    : 70
:                    : 18 19 21 22 25 26 27 30
<                    : 44
=                    : 31 32
>                    : 45
ATE                  : 25
CONSTANTE            : 40
CONTINUA             : 97 102
DE                   : 25
DEF                  : 26 27 30
DIF                  : 49
DIVIG                : 64
DIVINT               : 69
E                    : 77
ENQUANTO             : 22
EXP                  : 51
EXPIG                : 66
FIM                  : 21 22 25 26 27 30
ID                   : 14 24 25 26 27 30 31 32 35 36 37 106
IGUIG                : 46
IMPRIME              : 60
INT                  : 23 31 108
MAIORIG              : 47
MAISIG               : 61
MENORIG              : 48
MENOSIG              : 62
MODIG                : 65
MULTIG               : 63
NOVALINHA            : 3 10 28 29 81 82 85 86
OU                   : 75
PALAVRA              : 107
PARA                 : 25
QUEBRA               : 96 101
REAL                 : 109
RETORNA              : 59
SE                   : 21
SENAO                : 19
SENAOSE              : 18
TIPO                 : 14 26 27
VAZIO                : 30
[                    : 31
]                    : 31
error                : 

Nonterminals, with rules where they appear

afirm_composto       : 89 91
afirm_simples        : 88
afirm_simples_sem_retorno : 90
afirmacao            : 80 81
afirmacao_sem_retorno : 84 85
atribuicao           : 7 92 98
atribuicao_aumentada : 93 99
chamada              : 8 39
comparacao           : 50 51
controle             : 4
declaracao           : 5 55
definicao            : 6
defsubfuncao         : 9
empty                : 17 20 34 58 83 87
enquanto             : 12 104
exp_a                : 72 73 78
exp_e                : 74 75 77
exp_m                : 68 69 70 71 72 73
exp_nao              : 76 77 79
exp_ou               : 41 75
exp_u                : 51 53 54 67 68 69 70
exponenciacao        : 52
expressao            : 18 21 22 59 60
imprime              : 94 100
intid                : 25 25
literal              : 38
novalinha            : 27 29
op_aum               : 106
operador_comp        : 43
para                 : 13 105
param                : 56 57
params               : 26 27 30 56
primario             : 1 2 10
program              : 2 0
retorna              : 26 27 95
se                   : 11 103
senao                : 21
senaose              : 16
senaosemais          : 16 21
suite                : 18 19 21 22 25 30 81 82
suite_sem_retorno    : 26 27 85 86
valor                : 31 32 33 35 42 43 43 106
valorvalor           : 33 35

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . primario
    (2) program -> . primario program
    (3) program -> . NOVALINHA
    (4) primario -> . controle
    (5) primario -> . declaracao
    (6) primario -> . definicao
    (7) primario -> . atribuicao
    (8) primario -> . chamada
    (9) primario -> . defsubfuncao
    (10) primario -> . NOVALINHA primario
    (11) controle -> . se
    (12) controle -> . enquanto
    (13) controle -> . para
    (14) declaracao -> . TIPO ID
    (26) definicao -> . DEF TIPO ID ( params ) : suite_sem_retorno retorna FIM
    (27) definicao -> . DEF TIPO ID ( params ) : suite_sem_retorno retorna novalinha FIM
    (31) atribuicao -> . ID [ INT ] = valor
    (32) atribuicao -> . ID = valor
    (35) chamada -> . ID ( valor valorvalor )
    (36) chamada -> . ID ( )
    (30) defsubfuncao -> . DEF VAZIO ID ( params ) : suite FIM
    (21) se -> . SE expressao : suite senaosemais senao FIM
    (22) enquanto -> . ENQUANTO expressao : suite FIM
    (25) para -> . PARA ID DE intid ATE intid : suite FIM

    NOVALINHA       shift and go to state 3
    TIPO            shift and go to state 5
    DEF             shift and go to state 2
    ID              shift and go to state 13
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 14
    PARA            shift and go to state 1

    enquanto                       shift and go to state 4
    program                        shift and go to state 7
    controle                       shift and go to state 8
    para                           shift and go to state 9
    chamada                        shift and go to state 10
    definicao                      shift and go to state 11
    declaracao                     shift and go to state 12
    atribuicao                     shift and go to state 15
    defsubfuncao                   shift and go to state 16
    primario                       shift and go to state 6
    se                             shift and go to state 18

state 1

    (25) para -> PARA . ID DE intid ATE intid : suite FIM

    ID              shift and go to state 19


state 2

    (26) definicao -> DEF . TIPO ID ( params ) : suite_sem_retorno retorna FIM
    (27) definicao -> DEF . TIPO ID ( params ) : suite_sem_retorno retorna novalinha FIM
    (30) defsubfuncao -> DEF . VAZIO ID ( params ) : suite FIM

    TIPO            shift and go to state 20
    VAZIO           shift and go to state 21


state 3

    (3) program -> NOVALINHA .
    (10) primario -> NOVALINHA . primario
    (4) primario -> . controle
    (5) primario -> . declaracao
    (6) primario -> . definicao
    (7) primario -> . atribuicao
    (8) primario -> . chamada
    (9) primario -> . defsubfuncao
    (10) primario -> . NOVALINHA primario
    (11) controle -> . se
    (12) controle -> . enquanto
    (13) controle -> . para
    (14) declaracao -> . TIPO ID
    (26) definicao -> . DEF TIPO ID ( params ) : suite_sem_retorno retorna FIM
    (27) definicao -> . DEF TIPO ID ( params ) : suite_sem_retorno retorna novalinha FIM
    (31) atribuicao -> . ID [ INT ] = valor
    (32) atribuicao -> . ID = valor
    (35) chamada -> . ID ( valor valorvalor )
    (36) chamada -> . ID ( )
    (30) defsubfuncao -> . DEF VAZIO ID ( params ) : suite FIM
    (21) se -> . SE expressao : suite senaosemais senao FIM
    (22) enquanto -> . ENQUANTO expressao : suite FIM
    (25) para -> . PARA ID DE intid ATE intid : suite FIM

    $end            reduce using rule 3 (program -> NOVALINHA .)
    NOVALINHA       shift and go to state 22
    TIPO            shift and go to state 5
    DEF             shift and go to state 2
    ID              shift and go to state 13
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 14
    PARA            shift and go to state 1

    enquanto                       shift and go to state 4
    para                           shift and go to state 9
    primario                       shift and go to state 23
    chamada                        shift and go to state 10
    defsubfuncao                   shift and go to state 16
    atribuicao                     shift and go to state 15
    controle                       shift and go to state 8
    definicao                      shift and go to state 11
    declaracao                     shift and go to state 12
    se                             shift and go to state 18

state 4

    (12) controle -> enquanto .

    NOVALINHA       reduce using rule 12 (controle -> enquanto .)
    TIPO            reduce using rule 12 (controle -> enquanto .)
    DEF             reduce using rule 12 (controle -> enquanto .)
    ID              reduce using rule 12 (controle -> enquanto .)
    SE              reduce using rule 12 (controle -> enquanto .)
    ENQUANTO        reduce using rule 12 (controle -> enquanto .)
    PARA            reduce using rule 12 (controle -> enquanto .)
    $end            reduce using rule 12 (controle -> enquanto .)


state 5

    (14) declaracao -> TIPO . ID

    ID              shift and go to state 24


state 6

    (1) program -> primario .
    (2) program -> primario . program
    (1) program -> . primario
    (2) program -> . primario program
    (3) program -> . NOVALINHA
    (4) primario -> . controle
    (5) primario -> . declaracao
    (6) primario -> . definicao
    (7) primario -> . atribuicao
    (8) primario -> . chamada
    (9) primario -> . defsubfuncao
    (10) primario -> . NOVALINHA primario
    (11) controle -> . se
    (12) controle -> . enquanto
    (13) controle -> . para
    (14) declaracao -> . TIPO ID
    (26) definicao -> . DEF TIPO ID ( params ) : suite_sem_retorno retorna FIM
    (27) definicao -> . DEF TIPO ID ( params ) : suite_sem_retorno retorna novalinha FIM
    (31) atribuicao -> . ID [ INT ] = valor
    (32) atribuicao -> . ID = valor
    (35) chamada -> . ID ( valor valorvalor )
    (36) chamada -> . ID ( )
    (30) defsubfuncao -> . DEF VAZIO ID ( params ) : suite FIM
    (21) se -> . SE expressao : suite senaosemais senao FIM
    (22) enquanto -> . ENQUANTO expressao : suite FIM
    (25) para -> . PARA ID DE intid ATE intid : suite FIM

    $end            reduce using rule 1 (program -> primario .)
    NOVALINHA       shift and go to state 3
    TIPO            shift and go to state 5
    DEF             shift and go to state 2
    ID              shift and go to state 13
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 14
    PARA            shift and go to state 1

    enquanto                       shift and go to state 4
    program                        shift and go to state 25
    controle                       shift and go to state 8
    para                           shift and go to state 9
    chamada                        shift and go to state 10
    definicao                      shift and go to state 11
    declaracao                     shift and go to state 12
    atribuicao                     shift and go to state 15
    defsubfuncao                   shift and go to state 16
    primario                       shift and go to state 6
    se                             shift and go to state 18

state 7

    (0) S' -> program .



state 8

    (4) primario -> controle .

    NOVALINHA       reduce using rule 4 (primario -> controle .)
    TIPO            reduce using rule 4 (primario -> controle .)
    DEF             reduce using rule 4 (primario -> controle .)
    ID              reduce using rule 4 (primario -> controle .)
    SE              reduce using rule 4 (primario -> controle .)
    ENQUANTO        reduce using rule 4 (primario -> controle .)
    PARA            reduce using rule 4 (primario -> controle .)
    $end            reduce using rule 4 (primario -> controle .)


state 9

    (13) controle -> para .

    NOVALINHA       reduce using rule 13 (controle -> para .)
    TIPO            reduce using rule 13 (controle -> para .)
    DEF             reduce using rule 13 (controle -> para .)
    ID              reduce using rule 13 (controle -> para .)
    SE              reduce using rule 13 (controle -> para .)
    ENQUANTO        reduce using rule 13 (controle -> para .)
    PARA            reduce using rule 13 (controle -> para .)
    $end            reduce using rule 13 (controle -> para .)


state 10

    (8) primario -> chamada .

    NOVALINHA       reduce using rule 8 (primario -> chamada .)
    TIPO            reduce using rule 8 (primario -> chamada .)
    DEF             reduce using rule 8 (primario -> chamada .)
    ID              reduce using rule 8 (primario -> chamada .)
    SE              reduce using rule 8 (primario -> chamada .)
    ENQUANTO        reduce using rule 8 (primario -> chamada .)
    PARA            reduce using rule 8 (primario -> chamada .)
    $end            reduce using rule 8 (primario -> chamada .)


state 11

    (6) primario -> definicao .

    NOVALINHA       reduce using rule 6 (primario -> definicao .)
    TIPO            reduce using rule 6 (primario -> definicao .)
    DEF             reduce using rule 6 (primario -> definicao .)
    ID              reduce using rule 6 (primario -> definicao .)
    SE              reduce using rule 6 (primario -> definicao .)
    ENQUANTO        reduce using rule 6 (primario -> definicao .)
    PARA            reduce using rule 6 (primario -> definicao .)
    $end            reduce using rule 6 (primario -> definicao .)


state 12

    (5) primario -> declaracao .

    NOVALINHA       reduce using rule 5 (primario -> declaracao .)
    TIPO            reduce using rule 5 (primario -> declaracao .)
    DEF             reduce using rule 5 (primario -> declaracao .)
    ID              reduce using rule 5 (primario -> declaracao .)
    SE              reduce using rule 5 (primario -> declaracao .)
    ENQUANTO        reduce using rule 5 (primario -> declaracao .)
    PARA            reduce using rule 5 (primario -> declaracao .)
    $end            reduce using rule 5 (primario -> declaracao .)


state 13

    (31) atribuicao -> ID . [ INT ] = valor
    (32) atribuicao -> ID . = valor
    (35) chamada -> ID . ( valor valorvalor )
    (36) chamada -> ID . ( )

    [               shift and go to state 27
    =               shift and go to state 28
    (               shift and go to state 26


state 14

    (22) enquanto -> ENQUANTO . expressao : suite FIM
    (41) expressao -> . exp_ou
    (74) exp_ou -> . exp_e
    (75) exp_ou -> . exp_ou OU exp_e
    (76) exp_e -> . exp_nao
    (77) exp_e -> . exp_e E exp_nao
    (78) exp_nao -> . exp_a
    (79) exp_nao -> . ! exp_nao
    (71) exp_a -> . exp_m
    (72) exp_a -> . exp_a + exp_m
    (73) exp_a -> . exp_a - exp_m
    (67) exp_m -> . exp_u
    (68) exp_m -> . exp_m * exp_u
    (69) exp_m -> . exp_m DIVINT exp_u
    (70) exp_m -> . exp_m / exp_u
    (52) exp_u -> . exponenciacao
    (53) exp_u -> . - exp_u
    (54) exp_u -> . + exp_u
    (50) exponenciacao -> . comparacao
    (51) exponenciacao -> . comparacao EXP exp_u
    (42) comparacao -> . valor
    (43) comparacao -> . valor operador_comp valor
    (37) valor -> . ID
    (38) valor -> . literal
    (39) valor -> . chamada
    (40) valor -> . CONSTANTE
    (107) literal -> . PALAVRA
    (108) literal -> . INT
    (109) literal -> . REAL
    (35) chamada -> . ID ( valor valorvalor )
    (36) chamada -> . ID ( )

    !               shift and go to state 43
    -               shift and go to state 36
    +               shift and go to state 35
    ID              shift and go to state 45
    CONSTANTE       shift and go to state 46
    PALAVRA         shift and go to state 44
    INT             shift and go to state 48
    REAL            shift and go to state 29

    exp_e                          shift and go to state 30
    exp_a                          shift and go to state 31
    comparacao                     shift and go to state 32
    exp_m                          shift and go to state 33
    expressao                      shift and go to state 34
    chamada                        shift and go to state 41
    valor                          shift and go to state 40
    exp_u                          shift and go to state 37
    literal                        shift and go to state 38
    exponenciacao                  shift and go to state 39
    exp_nao                        shift and go to state 47
    exp_ou                         shift and go to state 42

state 15

    (7) primario -> atribuicao .

    NOVALINHA       reduce using rule 7 (primario -> atribuicao .)
    TIPO            reduce using rule 7 (primario -> atribuicao .)
    DEF             reduce using rule 7 (primario -> atribuicao .)
    ID              reduce using rule 7 (primario -> atribuicao .)
    SE              reduce using rule 7 (primario -> atribuicao .)
    ENQUANTO        reduce using rule 7 (primario -> atribuicao .)
    PARA            reduce using rule 7 (primario -> atribuicao .)
    $end            reduce using rule 7 (primario -> atribuicao .)


state 16

    (9) primario -> defsubfuncao .

    NOVALINHA       reduce using rule 9 (primario -> defsubfuncao .)
    TIPO            reduce using rule 9 (primario -> defsubfuncao .)
    DEF             reduce using rule 9 (primario -> defsubfuncao .)
    ID              reduce using rule 9 (primario -> defsubfuncao .)
    SE              reduce using rule 9 (primario -> defsubfuncao .)
    ENQUANTO        reduce using rule 9 (primario -> defsubfuncao .)
    PARA            reduce using rule 9 (primario -> defsubfuncao .)
    $end            reduce using rule 9 (primario -> defsubfuncao .)


state 17

    (21) se -> SE . expressao : suite senaosemais senao FIM
    (41) expressao -> . exp_ou
    (74) exp_ou -> . exp_e
    (75) exp_ou -> . exp_ou OU exp_e
    (76) exp_e -> . exp_nao
    (77) exp_e -> . exp_e E exp_nao
    (78) exp_nao -> . exp_a
    (79) exp_nao -> . ! exp_nao
    (71) exp_a -> . exp_m
    (72) exp_a -> . exp_a + exp_m
    (73) exp_a -> . exp_a - exp_m
    (67) exp_m -> . exp_u
    (68) exp_m -> . exp_m * exp_u
    (69) exp_m -> . exp_m DIVINT exp_u
    (70) exp_m -> . exp_m / exp_u
    (52) exp_u -> . exponenciacao
    (53) exp_u -> . - exp_u
    (54) exp_u -> . + exp_u
    (50) exponenciacao -> . comparacao
    (51) exponenciacao -> . comparacao EXP exp_u
    (42) comparacao -> . valor
    (43) comparacao -> . valor operador_comp valor
    (37) valor -> . ID
    (38) valor -> . literal
    (39) valor -> . chamada
    (40) valor -> . CONSTANTE
    (107) literal -> . PALAVRA
    (108) literal -> . INT
    (109) literal -> . REAL
    (35) chamada -> . ID ( valor valorvalor )
    (36) chamada -> . ID ( )

    !               shift and go to state 43
    -               shift and go to state 36
    +               shift and go to state 35
    ID              shift and go to state 45
    CONSTANTE       shift and go to state 46
    PALAVRA         shift and go to state 44
    INT             shift and go to state 48
    REAL            shift and go to state 29

    exp_e                          shift and go to state 30
    exp_a                          shift and go to state 31
    comparacao                     shift and go to state 32
    exp_m                          shift and go to state 33
    expressao                      shift and go to state 49
    chamada                        shift and go to state 41
    exp_u                          shift and go to state 37
    literal                        shift and go to state 38
    exponenciacao                  shift and go to state 39
    exp_nao                        shift and go to state 47
    exp_ou                         shift and go to state 42
    valor                          shift and go to state 40

state 18

    (11) controle -> se .

    NOVALINHA       reduce using rule 11 (controle -> se .)
    TIPO            reduce using rule 11 (controle -> se .)
    DEF             reduce using rule 11 (controle -> se .)
    ID              reduce using rule 11 (controle -> se .)
    SE              reduce using rule 11 (controle -> se .)
    ENQUANTO        reduce using rule 11 (controle -> se .)
    PARA            reduce using rule 11 (controle -> se .)
    $end            reduce using rule 11 (controle -> se .)


state 19

    (25) para -> PARA ID . DE intid ATE intid : suite FIM

    DE              shift and go to state 50


state 20

    (26) definicao -> DEF TIPO . ID ( params ) : suite_sem_retorno retorna FIM
    (27) definicao -> DEF TIPO . ID ( params ) : suite_sem_retorno retorna novalinha FIM

    ID              shift and go to state 51


state 21

    (30) defsubfuncao -> DEF VAZIO . ID ( params ) : suite FIM

    ID              shift and go to state 52


state 22

    (10) primario -> NOVALINHA . primario
    (4) primario -> . controle
    (5) primario -> . declaracao
    (6) primario -> . definicao
    (7) primario -> . atribuicao
    (8) primario -> . chamada
    (9) primario -> . defsubfuncao
    (10) primario -> . NOVALINHA primario
    (11) controle -> . se
    (12) controle -> . enquanto
    (13) controle -> . para
    (14) declaracao -> . TIPO ID
    (26) definicao -> . DEF TIPO ID ( params ) : suite_sem_retorno retorna FIM
    (27) definicao -> . DEF TIPO ID ( params ) : suite_sem_retorno retorna novalinha FIM
    (31) atribuicao -> . ID [ INT ] = valor
    (32) atribuicao -> . ID = valor
    (35) chamada -> . ID ( valor valorvalor )
    (36) chamada -> . ID ( )
    (30) defsubfuncao -> . DEF VAZIO ID ( params ) : suite FIM
    (21) se -> . SE expressao : suite senaosemais senao FIM
    (22) enquanto -> . ENQUANTO expressao : suite FIM
    (25) para -> . PARA ID DE intid ATE intid : suite FIM

    NOVALINHA       shift and go to state 22
    TIPO            shift and go to state 5
    DEF             shift and go to state 2
    ID              shift and go to state 13
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 14
    PARA            shift and go to state 1

    enquanto                       shift and go to state 4
    para                           shift and go to state 9
    primario                       shift and go to state 23
    chamada                        shift and go to state 10
    defsubfuncao                   shift and go to state 16
    atribuicao                     shift and go to state 15
    controle                       shift and go to state 8
    definicao                      shift and go to state 11
    declaracao                     shift and go to state 12
    se                             shift and go to state 18

state 23

    (10) primario -> NOVALINHA primario .

    NOVALINHA       reduce using rule 10 (primario -> NOVALINHA primario .)
    TIPO            reduce using rule 10 (primario -> NOVALINHA primario .)
    DEF             reduce using rule 10 (primario -> NOVALINHA primario .)
    ID              reduce using rule 10 (primario -> NOVALINHA primario .)
    SE              reduce using rule 10 (primario -> NOVALINHA primario .)
    ENQUANTO        reduce using rule 10 (primario -> NOVALINHA primario .)
    PARA            reduce using rule 10 (primario -> NOVALINHA primario .)
    $end            reduce using rule 10 (primario -> NOVALINHA primario .)


state 24

    (14) declaracao -> TIPO ID .
